--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "domparser": "^0.1.1",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "node-cache": "^5.1.2"
   }
 }
