--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@upstash/redis": "^1.34.4",
     "axios": "^1.7.9",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
-    "domparser": "^0.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "node-cache": "^5.1.2",
-    "puppeteer": "^24.2.1"
+    "ioredis": "^5.5.0",
+    "node-cache": "^5.1.2"
   }
 }
